kubernetes/ingress-kube/ingress-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysqlcore-ingress
spec:
  rules:
  - host: mysqlcore.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5820
